# lcsh-validation-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_api_key.py  main.py  pyproject.toml  requirements.txt  scraper.py  similarity.py
