[project]
name = "lcsh-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "fastapi>=0.104.1",
    "httpx>=0.25.2",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.2",
    "uvicorn>=0.24.0",
]
